--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-service": "^3.0.4",
     "vue-template-compiler": "^2.5.17"
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not id <= 8"
+  ]
 }
